src/tests/fixtures/resolver_context/ClassMethodWithContextValueInArgsPos.invalid.ts.expected
-----------------
INPUT
----------------- 
type GratsContext = {
  greeting: string;
};

/** @gqlType */
export class SomeType {
  /** @gqlField */
  greeting(ctx: GratsContext): string {
    return ctx.greeting;
  }
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/resolver_context/ClassMethodWithContextValueInArgsPos.invalid.ts:8:17 - error: Expected a reference to a declaration with a `@gql*` docblock. Grats needs to determine which GraphQL type is being referenced in this location. This requires being able to resolve type references to their `@gql` annotated declaration.

8   greeting(ctx: GratsContext): string {
                  ~~~~~~~~~~~~

  src/tests/fixtures/resolver_context/ClassMethodWithContextValueInArgsPos.invalid.ts:1:1
    1 type GratsContext = {
      ~~~~~~~~~~~~~~~~~~~~~
    2   greeting: string;
      ~~~~~~~~~~~~~~~~~~~
    3 };
      ~~
    Did you mean to add a `@gql*` docblock to this declaration?
